[package]
name = "mfcc"
version = "0.1.0"
authors = ["Alec DiFederico <alecdifederico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
exitcode = "1.1.2"
indicatif = "0.15.0"
console = "0.13.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
