[package]
name = "mfc-cloner"
version = "0.1.1"
authors = ["Alec DiFederico <alecdifederico@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A way to facilitate easy cloning of mifare classic cards"
readme = "README.md"
homepage = "https://github.com/Alec1017/mifare-classic-cloner"
repository = "https://github.com/Alec1017/mifare-classic-cloner"
keywords = ["cli", "mifare", "clone"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
exitcode = "1.1.2"
indicatif = "0.15.0"
console = "0.13.0"
log-update = "0.1.0"
